--- a/index.html
+++ b/index.html
@@ -3,13 +3,14 @@
 <html>
     <head>
         <title>Something</title>
-        <link rel = "stylesheet"
-        href = "src/css/index.css" />
+        <link rel = "stylesheet" href = "index.css" />
     </head>
+
     <body>
-        <div class = "js-clock">
-        <h1>00:00</h1>
+        <div class="js-clock">
+            <h1>00:00</h1>
         </div>
-        <script src = "src/js/clock.js"></script>
+        <script src = "clock.js"></script>
     </body>
+
 </html>
