--- a/index.html
+++ b/index.html
@@ -10,7 +10,12 @@
         <div class="js-clock">
             <h1>00:00</h1>
         </div>
-        <script src = "clock.js"></script>
+        <form class="js-form form">
+            <input type="text" placeholder="what is your name?" />
+        </form>
+        <h4 class="js-greetings greetings"></h4>
+        <script src="clock.js"></script>
+        <script src="gretting.js"></script> 
     </body>
 
 </html>
